[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ColorObj_Dh.gd" type="Script" id=1]
[ext_resource path="res://assets/painting-bucket.png" type="Texture" id=2]
[ext_resource path="res://assets/Animations/Item_default_anim.tres" type="Animation" id=3]
[ext_resource path="res://assets/collect_effects.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Collect_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="RandomColor" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -6, 3, -3, 4, -2, 9, 0, 12, 4, 13, 9, 11, 9, 10, 12, 9, 13, 7, 12, 6, 10, 6, 6, 6, 4, 3, 8, -2, 12, -4, 13, -7, 11, -10, 8, -13, 3, -8, -2, -8, -11, -6, -13, -4, -13, -1, -11 )

[node name="Animations" type="Node" parent="."]

[node name="Item_default_anim" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/item_default_anim = ExtResource( 3 )

[node name="Collect_anim" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/Collect_anim = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ColorObj_Dh_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_ColorObj_body_entered"]
[connection signal="animation_finished" from="Animations/Collect_anim" to="." method="_on_Collect_anim_animation_finished"]
